@@ -2,13 +2,15 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1418 2010-09-23 08:57:35 mg Exp $
+# $Id: CHANGES,v 1.1419 2010-09-23 09:07:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
 # did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 # --
 3.0.0 beta4 2010-09-??
+ - 2010-09-23 Fixed bug#5982 - Email address does not render properly if it
+    contains braces.
  - 2010-09-23 Fixed bug#5987 - No column titles for ticket list in customer interface.
     This can now be configured with the config setting
     "Ticket::Frontend::CustomerTicketOverviewSortable".
